# trix

./: CMakeLists.txt
doc/: my-language.trx
include/: Ast.h  SymbolTable.h
src/: SymbolTable.cpp  Trix.atg  Trix.cpp
test/: test1.txt
tools/: Coco-osx
